tried to fix console overflow direction

--- a/public/stylesheets/challenge.css
+++ b/public/stylesheets/challenge.css
@@ -33,7 +33,7 @@
   height: 400px;
   padding: 1em;
   background-color: #202020;
-  margin: 2em 2em 2em 0;
+  margin: 2em 4em 2em 0;
   color: #FFF;
   white-space: pre-wrap;
   overflow: auto;
